# acho-site

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  run
src/: main.rs
static/: styles.css
templates/: base.html  edit.html  index.html  new.html  project.html
